Fix CORS for Cloudflare Pages: allow *.pages.dev origin patterns.
Co-authored-by: Cursor <cursoragent@cursor.com>